Paginas Responsivas de Cadastro

--- a/cadastrodeprodutodoacao.html
+++ b/cadastrodeprodutodoacao.html
@@ -135,17 +135,11 @@
         .fotos_cadastroproduto img {
             width: 80px;
         }
-
+        /*Tablet*/
         @media (max-width: 1024px) {
-            body {
-                width: 500px;
-            }
-
             main {
                 width: 1000px;
             }
-
-
             .card_cadastroproduto h2 {
                 font-size: 20px;
             }
@@ -197,35 +191,9 @@
 </head>
 
 <body>
-    <!-- <header>
-        <div class="container">
-            <div class="ca">
-                <img src="img/Agrupar 110.png" alt="logo smart sale" id="avatar">
-                <label>
-                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
-                        aria-label="Faça uma busca" name="search">
-                </label>
-                <div class="botao-login">
-                    <a href="#"><img src="img/avatar.png" alt="Link para fazer login" id="entrar">
-                        <p>Entrar</p>
-                    </a>
-                </div>
-            </div>
-            <nav>
-                <div class="menu-centro">
-                    <ul class="menu">
-                        <li><a href="#" title="Smart sale home">Home</a></li>
-                        <li><a href="#" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="#" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="#" title="Smart sale ranking">Ranking</a></li>
-                        <li><a href="#" title="Smart sale categorias">Categorias</a></li>
-                        <li><a href="#" title="Smart sale perfil">Perfil</a></li>
-                        <li><a href="#" title="Smart sale faq">FAQ</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header> -->
+    <header>
+
+    </header>
     <main>
         <div class="card_cadastroproduto">
             <h2>Cadastro de Produto</h2>
@@ -292,9 +260,9 @@
             </form>
         </div>
     </main>
-    <!-- <footer>
-        <p>SMART SALE ©2019</p>
-    </footer> -->
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
