--- a/cadastroelogin.html
+++ b/cadastroelogin.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro e Login</title>
-    <link rel="stylesheet" href="css/final.css">
-    <!-- <style>
+    <!-- <link rel="stylesheet" href="CSS/estilos.css"> -->
+    <style>
         :root {
             --roxo: #A200CB;
         }
@@ -69,7 +69,9 @@
             width: 160px;
         }
 
-        h3, label, input {
+        h3,
+        label,
+        input {
             color: #707070;
         }
 
@@ -79,7 +81,6 @@
             padding-bottom: 15px;
         }
 
-<<<<<<< HEAD
         .login_cadlog,
         .cadastro_cadlog {
             padding: 9px;
@@ -87,13 +88,6 @@
 
         .login_cadlog input,
         .cadastro_cadlog input {
-=======
-        .login, .cadastro {
-            padding: 9px;
-        }
-
-        .login input, .cadastro input {
->>>>>>> e8b159fc81c1a029e25e68e8254afd0fdcfd9397
             padding: 5px;
         }
 
@@ -111,7 +105,6 @@
             border: solid 1px var(--roxo);
             color: white;
         }
-<<<<<<< HEAD
 
         @media (max-width: 1024px) {
             main {
@@ -147,33 +140,35 @@
         }
         @media (max-width: 767px){
             main {
-                width: 700px;
-            }
-            form{
-
+                width: 750px;
             }
             h3 {
                 font-size: 30px;
             }
-
+            label{
+                padding-bottom: 5px;
+            }
             .cards_cadlog {
                 display: flex;
                 align-items: center;
                 flex-direction: column;
                 font-size: 30px;
-                width: 800px;
+                width: 600px;
             }
             .card_1_cadlog{
-
+                width: 350px;
+                margin-bottom: 20px;
+            }
+            .card_1_cadlog input{
+                margin: 5px;
+                height: auto;
             }
             .card_2_cadlog{
-                
+                height: auto;
+                width: 350px;
             }
         }
     </style>
-=======
-    </style> -->
->>>>>>> e8b159fc81c1a029e25e68e8254afd0fdcfd9397
     <style>
 
     </style>
@@ -183,7 +178,6 @@
     <header>
     </header>
     <main>
-<<<<<<< HEAD
         <div class="cards_cadlog">
             <div class="card_1_cadlog">
                 <h3>FAÇA LOGIN</h3>
@@ -260,86 +254,6 @@
                         <button type="submit"><b>CADASTRAR</b></button>
                     </div>
                 </form>
-=======
-        <div class="cadastroelogin_pag">
-            <div class="cards">
-                <div class="card_1">
-                    <h3>FAÇA LOGIN</h3>
-                    <form method="POST">
-                        <div class="login">
-                            <label>Usuário</label>
-                            <input type="text" placeholder="Digite seu nome..." aria-label="Digite seu nome..."
-                                name="usuario" required>
-                        </div>
-                        <div class="login">
-                            <label>Senha</label>
-                            <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                                name="senha" required>
-                        </div>
-                        <div class="btn">
-                            <button type="submit"><b>ACESSAR</b></button>
-                        </div>
-                    </form>
-                </div>
-                <div class="card_2">
-                    <h3>CADASTRAR-SE</h3>
-                    <form method="POST">
-                        <div class="cadastro">
-                            <label>Nome</label>
-                            <input type="text" placeholder="Digite o nome completo..."
-                                aria-label="Digite o nome completo..." name="nome" required>
-                        </div>
-                        <div class="cadastro">
-                            <label>CPF</label>
-                            <input type="text" placeholder="Digite seu CPF..." aria-label="Digite seu CPF..." name="cpf"
-                                required>
-                        </div>
-                        <div class="cadastro">
-                            <label>Idade</label>
-                            <input type="text" placeholder="Digite sua idade" aria-label="Digite sua idade.." name="idade"
-                                required>
-                        </div>
-                        <div class="cadastro">
-                            <label>Telefone</label>
-                            <input type="text" placeholder="Digite seu telefone..." aria-label="Digite seu telefone..."
-                                name="tel" required>
-                        </div>
-                        <div class="cadastro">
-                            <label>CEP</label>
-                            <input type="text" placeholder="Digite seu CEP..." aria-label="Digite seu CEP..." name="cep"
-                                required>
-                        </div>
-                        <div class="cadastro">
-                            <label>Endereço</label>
-                            <input type="text" placeholder="Digite seu endereço..." aria-label="Digite seu endereço..."
-                                name="endereco" required>
-                        </div>
-                        <div class="cadastro">
-                            <label>Número</label>
-                            <input type="text" placeholder="Digite o número da casa..."
-                                aria-label="Digite o número da casa..." name="numero" required>
-                        </div>
-                        <div class="cadastro">
-                            <label>Bairro</label>
-                            <input type="text" placeholder="Digite seu bairro..." aria-label="Digite seu bairro..."
-                                name="bairro" required>
-                        </div>
-                        <div class="cadastro">
-                            <label>E-mail</label>
-                            <input type="email" placeholder="Digite seu e-mail..." aria-label="Digite seu e-mail..."
-                                name="email" required>
-                        </div>
-                        <div class="cadastro">
-                            <label>Senha</label>
-                            <input type="password" placeholder="Digite sua senha..." aria-label="Digite sua senha..."
-                                name="senha" required>
-                        </div>
-                        <div class="btn">
-                            <button type="submit"><b>CADASTRAR</b></button>
-                        </div>
-                    </form>
-                </div>
->>>>>>> e8b159fc81c1a029e25e68e8254afd0fdcfd9397
             </div>
         </div>
     </main>
