--- a/ONG's.html
+++ b/ONG's.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ONG's</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <!-- <link rel="stylesheet" href="css/estilos.css"> -->
     <style>
         * {
             margin: 0;
@@ -14,196 +14,93 @@
             font-family: 'Segoe UI';
         }
 
-        .container {
-            width: 1200px;
-            padding: auto;
+        .conteudo_ongs {
+            display: flex;
+            align-items: center;
+        }
+
+        .container_ongs {
             margin: auto;
-            background-color: white;
-            color: #707070;
+
         }
 
-        .conteudo {
-            display: flex;
-            justify-content: space-between;
-            height: 150px;
-            margin: 25px;
-            padding: 25px;
-            font-family: 'Segoe UI';
-            align-items: flex-start;
-            font-size: 16px;
-            align-items: center;
+        @media screen (max-width 1024px) {
+            main {
+                width: 800px;
+                margin: auto;
+            }
         }
 
-        header {
-            height: 130px;
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            background-color: #A200CB;
-        }
+        @media screen(max-width: 767px) {
+            main {
+                width: 500px;
+            }
+            .conteudo_ongs{
+                display: flex;
+                flex-direction: column;
 
-        .container img {
-            height: 95px;
-            width: 204px;
-        }
-
-        .container {
-            width: 1200px;
-            margin: auto;
-        }
-
-        .container input {
-            width: 605px;
-            height: 35px;
-            margin-left: -120px;
-        }
-
-        .menu-centro {
-            display: flex;
-            justify-content: center;
-            background-color: #A200CB;
-        }
-
-        .ca {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #A200CB;
-        }
-
-        .ca a {
-            text-decoration: none;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .botao-login {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        #entrar {
-            width: 30px;
-            height: 35px;
-            margin: 10px;
-        }
-
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .menu a {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        footer {
-            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-            color: white;
-            font-size: 18px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .conteudo img {
-            width: 150px;
-            height: 150px;
-            background-color: white;
+            }
         }
     </style>
 </head>
-<header>
-    <div class="container">
-        <div class="ca">
-            <img src="img/Agrupar 110.png" alt="logo smart sale" id="avatar">
-            <label>
-                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca"
-                    name="search">
-            </label>
-            <div class="botao-login">
-                <a href="#"><img src="img/avatar.png" alt="Link para fazer login" id="entrar">
-                    <p>Entrar</p>
-                </a>
-            </div>
-        </div>
-        <nav>
-            <div class="menu-centro">
-                <ul class="menu">
-                    <li><a href="#" title="Smart sale home">Home</a></li>
-                    <li><a href="#" title="Smart sale quem somos">Quem somos</a></li>
-                    <li><a href="#" title="Smart sale ongs">ONGs</a></li>
-                    <li><a href="#" title="Smart sale ranking">Ranking</a></li>
-                    <li><a href="#" title="Smart sale categorias">Categorias</a></li>
-                    <li><a href="#" title="Smart sale perfil">Perfil</a></li>
-                    <li><a href="#" title="Smart sale faq">FAQ</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-</header>
+
 <body>
-    <div class="container">
-        <section class="conteudo">
-            <img src="img/mais.png" alt="ONG mais">
-            <div class="texto">
-                <h1>Nome da Instituição</h1>
-                <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong</p>
-            </div>
-        </section>
-        <section class="conteudo">
-            <img src="img/AMAI.png" alt="ONG AMAI">
-            <div class="texto">
-                <h1>Nome da Instituição</h1>
-                <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong</p>
-        </section>
-        </section>
-        <section class="conteudo">
-            <img src="img/happy-people-and-warm-community.png" alt="ONG Pessoas Felizes">
-            <div class="texto">
-                <h1>Nome da Instituição</h1>
-                <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong</p>
-            </div>
-        </section>
-        <section class="conteudo">
-            <img src="img/colorful-hand-and-warm-community.png" alt="ONG Colorida">
-            <div class="texto">
-                <h1>Nome da Instituição</h1>
-                <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong</p>
-            </div>
-        </section>
-    </div>
+    <header>
+
+    </header>
+    <main>
+        <div class="container_ongs">
+            <section class="conteudo_ongs">
+                <img src="img/mais.png" alt="ONG mais">
+                <div class="texto_ongs">
+                    <h1>Nome da Instituição</h1>
+                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                    </p>
+                </div>
+            </section>
+            <section class="conteudo_ongs">
+                <img src="img/AMAI.png" alt="ONG AMAI">
+                <div class="texto_ongs">
+                    <h1>Nome da Instituição</h1>
+                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                    </p>
+                </div>
+            </section>
+            <section class="conteudo_ongs">
+                <img src="img/happy-people-and-warm-community.png" alt="ONG Pessoas Felizes">
+                <div class="texto_ongs">
+                    <h1>Nome da Instituição</h1>
+                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                    </p>
+                </div>
+            </section>
+            <section class="conteudo_ongs">
+                <img src="img/colorful-hand-and-warm-community.png" alt="ONG Colorida">
+                <div class="texto_ongs">
+                    <h1>Nome da Instituição</h1>
+                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
+                    </p>
+                </div>
+            </section>
+        </div>
+    </main>
     <footer>
-        <p>SMART SALE ©2019</p>
     </footer>
 </body>
 
