--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -19,8 +19,7 @@
         <div class="container">
             <div class="ca">
                 <div class="logo">
-                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale"
-                            alt="logo smart sale"></a>
+                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
                 </div>
                 <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                 <div class="botao-login">
@@ -30,14 +29,14 @@
                 </div>
             </div>
             <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
-            <a class="btn-close"> <i class="fa fa-times"></i> </a>
+            <a class="btn-close"><i class="fa fa-times"></i></a>
             <nav>
                 <div class="menu-centro">
                     <ul class="menu">
                         <li><a href="home.html" title="Smart sale home">Home</a></li>
                         <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="ongs.html" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="paginaRankingAGORAVAIJESUS.html" title="Smart sale ranking">Ranking</a></li>
+                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
                         <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
                         <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
                         <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
@@ -84,7 +83,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                         <div class="cardProduto">
@@ -96,7 +95,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                         <div class="cardProduto">
@@ -108,7 +107,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                         <div class="cardProduto">
@@ -120,7 +119,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                         <div class="cardProduto">
@@ -132,7 +131,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                         <div class="cardProduto">
@@ -144,7 +143,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                         <div class="cardProduto">
@@ -156,7 +155,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                         <div class="cardProduto">
@@ -168,7 +167,7 @@
                                 <p>Campos Elíseos - São Paulo</p>
                             </div>
                             <div class="botaoCard">
-                                <a href="#" class="btn">Reserve</a>
+                                <a href="paginaProduto.html" class="btn">Reserve</a>
                             </div>
                         </div>
                     </div>
