--- a/ONG's.html
+++ b/ONG's.html
@@ -5,13 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ONG's</title>
-<<<<<<< HEAD
-    <!-- <link rel="stylesheet" href="css/estilos.css"> -->
-    <style>
-=======
     <link rel="stylesheet" href="css/final.css">
     <!-- <style>
->>>>>>> c765dda3a2209f40aa4b400ff40efd72233692e9
         * {
             margin: 0;
             padding: 0;
@@ -47,88 +42,32 @@
         }
     </style> -->
 </head>
-<<<<<<< HEAD
-
-<body>
-    <header>
-
-    </header>
-    <main>
-        <div class="container_ongs">
-            <section class="conteudo_ongs">
-                <img src="img/mais.png" alt="ONG mais">
-                <div class="texto_ongs">
-                    <h1>Nome da Instituição</h1>
-                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    </p>
-                </div>
-            </section>
-            <section class="conteudo_ongs">
-                <img src="img/AMAI.png" alt="ONG AMAI">
-                <div class="texto_ongs">
-                    <h1>Nome da Instituição</h1>
-                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    </p>
-                </div>
-            </section>
-            <section class="conteudo_ongs">
-                <img src="img/happy-people-and-warm-community.png" alt="ONG Pessoas Felizes">
-                <div class="texto_ongs">
-                    <h1>Nome da Instituição</h1>
-                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    </p>
-                </div>
-            </section>
-            <section class="conteudo_ongs">
-                <img src="img/colorful-hand-and-warm-community.png" alt="ONG Colorida">
-                <div class="texto_ongs">
-                    <h1>Nome da Instituição</h1>
-                    <p>informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                        informações sobre a ong informações sobre a ong informações sobre a ong informações sobre a ong
-                    </p>
-                </div>
-            </section>
-=======
 <body>
     <header>
         <div class="container">
             <div class="ca">
-                <img src="img/Agrupar 110.png" alt="logo smart sale" id="avatar">
-                <label>
-                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca"
-                        name="search">
-                </label>
+                <div class="logo">
+                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
+                </div>
+                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                 <div class="botao-login">
-                    <a href="#"><img src="img/avatar.png" alt="Link para fazer login" id="entrar">
+                    <a href="login.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
                         <p>Entrar</p>
                     </a>
                 </div>
             </div>
+            <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
+            <a class="btn-close"><i class="fa fa-times"></i></a>
             <nav>
                 <div class="menu-centro">
                     <ul class="menu">
-                        <li><a href="#" title="Smart sale home">Home</a></li>
-                        <li><a href="#" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="#" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="#" title="Smart sale ranking">Ranking</a></li>
-                        <li><a href="#" title="Smart sale categorias">Categorias</a></li>
-                        <li><a href="#" title="Smart sale perfil">Perfil</a></li>
-                        <li><a href="#" title="Smart sale faq">FAQ</a></li>
+                        <li><a href="home.html" title="Smart sale home">Home</a></li>
+                        <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
+                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
+                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
+                        <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
+                        <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
                     </ul>
                 </div>
             </nav>
@@ -182,7 +121,6 @@
                     </div>
                 </section>
             </div>
->>>>>>> c765dda3a2209f40aa4b400ff40efd72233692e9
         </div>
     </main>
     <footer>
