--- a/filtroProdutos.html
+++ b/filtroProdutos.html
@@ -30,8 +30,8 @@
                     <ul class="menu">
                         <li><a href="home.html" title="Smart sale home">Home</a></li>
                         <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="ongs.html" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="paginaRankingAGORAVAIJESUS.html" title="Smart sale ranking">Ranking</a></li>
+                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
                         <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
                         <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
                         <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
@@ -89,7 +89,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div> 
                                         </div>
                                     </div>
@@ -107,7 +107,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div> 
                                         </div>
                                     </div>
@@ -125,7 +125,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div> 
                                         </div>
                                     </div>
@@ -143,7 +143,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div> 
                                         </div>
                                     </div>
@@ -166,7 +166,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div> 
                                         </div>
                                     </div>
@@ -184,7 +184,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div>
                                         </div> 
                                     </div>
@@ -202,7 +202,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div> 
                                         </div>
                                     </div>
@@ -220,7 +220,7 @@
                                                 <p>Campos Elíseos - São Paulo</p>
                                             </div>
                                             <div class="botaoCard">
-                                                <a href="#" class="btn">Reserve</a>
+                                                <a href="paginaProduto.html" class="btn">Reserve</a>
                                             </div> 
                                         </div>
                                     </div>
