--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <style>
+    <!-- <style>
         :root {
             --roxo: #a200cb;
             --grafite: #707070;
@@ -569,7 +569,7 @@
 
             }
         }
-    </style>
+    </style> -->
     <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
@@ -579,6 +579,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home - Smart Sale</title>
+    <link rel="stylesheet" href="./css/final.css">
 </head>
 
 <body>
@@ -613,6 +614,7 @@
             </div>
         </header>
     <main>
+        <div class="home_pag">
 
         <div class="banner-home"></div>
         <div class="container>">
@@ -641,7 +643,7 @@
                 </div>
             </div>
         </div>
-        </div>
+        
         <div class="container" id="white">
             <h3> Categorias </h3>
 
@@ -778,15 +780,6 @@
                     </div>
                 </div>
         </div>
-        </div>
-        </div>
-        </div>
-        </div>
-        </section>
-        </div>
-
-
-
         </div>
     </main>
     <footer>
