Arrumei os bugs e a home tá responsiva

--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Perguntas Frequentes</title>
     <link rel="stylesheet" href="css/final.css">
-    <style>
+    <!-- <style>
         :root {
             --roxo: #a200cb;
             --grafite: #707070;
@@ -112,7 +112,7 @@
         h2 {
             line-height: 2.0em;
         }
-    </style>
+    </style> -->
 
     <body>    
         <header>
@@ -146,6 +146,7 @@
             </div>
         </header>
         <main>
+            <div class="faq_pag">
             <div class="container1_perguntasfrequentes">
                 <div class="texto_perguntasfrequentes">
                     <img src="img/sonhar-com-mercado.png" alt=" Dúvidas Mercado">
@@ -176,6 +177,7 @@
                     <button type="submit" id="enviar">ENVIAR</button>
                 </div>
             </div>
+        </div>
         </main>
         <footer>
             <p>SMART SALE ©2019</p>
