--- a/finalDaReserva.html
+++ b/finalDaReserva.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Smart sale</title>
+    <title>Final da Reserva - Smart Sale</title>
     <link rel="stylesheet" href="css/final.css">
 </head>
 
@@ -18,7 +18,7 @@
                 </div>
                 <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                 <div class="botao-login">
-                    <a href="login.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
+                    <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
                         <p>Entrar</p>
                     </a>
                 </div>
@@ -42,25 +42,22 @@
     </header>
 
     <main>
-        <div class="finalreserva_pag">
-            <h1>Final da Reserva</h1>
-            <div class="container">
-                <div>
-                <section class="esquerdo">
+        <div class="finalreserva_pag">            
+            <div class="container">                
+                <section class="esquerdo">                    
                     <div class="texto">
+                        <h1>Final da Reserva</h1>
                         <h3>Seu produto foi reservado com sucesso!</h3>
                     </div>
-
                     <div class="textos2">
                         <p>Detalhes da Reserva</p>
-                        <P>Data de entrega</P>
-                        <p>Quantidade</p>
+                        <P>Data de entrega: 10/12/2019</P>
+                        <p>Quantidade: X</p>
                     </div>
                 </section>
                 <section class="direito">
                     <img src="./img/E11-3505-006_zoom1.jpg" alt="imagem do produto, salto alto">
-                </section>
-                </div>
+                </section>                
             </div>
         </div>
     </main>
