--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">    
 </head>
-
 <body>
     <header>
         <div class="container">
@@ -23,7 +21,7 @@
                 </div>
                 <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                 <div class="botao-login">
-                    <a href="login.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
+                    <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
                         <p>Entrar</p>
                     </a>
                 </div>
@@ -65,7 +63,7 @@
                                 <input type="number" name="quantidade" id="">
                             </div>
                             <div class="botoes">
-                                <a class="botaoReservar" href="#">Reservar</a>
+                                <a class="botaoReservar" href="finalDaReserva.html">Reservar</a>
                                 <!-- <a class="botaoComprar" href="#">Comprar</a> -->
                             </div>
                         </div>
