--- a/perfil.html
+++ b/perfil.html
@@ -20,7 +20,7 @@
                 </div>
                 <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                 <div class="botao-login">
-                    <a href="login.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
+                    <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
                         <p>Entrar</p>
                     </a>
                 </div>
@@ -44,6 +44,7 @@
     </header>
     <main>
         <div class="perfil_pag">
+            <div class="cont">
             <h2>Débora Nascimento</h2>
             <div class="cima">
                 <section class="esquerdo">
@@ -77,6 +78,7 @@
                 </section>
             </div>
         </div>
+    </div>
     </main>
 
     <footer>
