--- a/quemsomos.html
+++ b/quemsomos.html
@@ -7,157 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quem somos</title>
     <link rel="stylesheet" href="css/final.css">
-    <!-- <style>
-        :root {
-            --roxo: #A200CB;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            height: 130px;
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            background-color: #A200CB;
-        }
-
-        .container img {
-            height: 95px;
-            width: 204px;
-        }
-
-        .container {
-            width: 1200px;
-            margin: auto;
-        }
-
-        .container input {
-            width: 605px;
-            height: 35px;
-            margin-left: -120px;
-        }
-
-        .menu-centro {
-            display: flex;
-            justify-content: center;
-        }
-
-        .ca {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        .ca a {
-            text-decoration: none;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .botao-login {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        #entrar {
-            width: 30px;
-            height: 35px;
-            margin: 10px;
-        }
-
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .menu a {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        footer {
-            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-            color: white;
-            font-size: 18px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        /*Conteúdo*/
-        main {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #EBEBEB;
-        }
-
-        .bannerquemsomos {
-            background-image: url(img/banner.png);
-            width: 100%;
-            /*Importante colocar 100% para ele agir sozinho*/
-            height: 443px;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
-        }
-
-        .caixao {
-            display: flex;
-            flex-direction: column;
-            text-align: justify;
-            height: 600px;
-            margin-right: 30px;
-        }
-
-        h2 {
-            padding: 25px;
-        }
-
-        .one, .two {
-            color: #707070;
-        }
-
-        .one {
-            width: 400px;
-            font-size: 20px;
-        }
-
-        .two {
-            width: 400px;
-            font-size: 20px;
-        }
-
-        .tudo {
-            align-items: center;
-            display: flex;
-            width: 900px;
-            margin: auto;
-            margin-top: 30px;
-
-        }
-
-        .tudo img {
-            width: 547, 12px;
-            height: 571, 46;
-        }
-    </style> -->
 </head>
-
 <body>
     <header>
         <div class="container">
@@ -197,7 +47,7 @@
                     <div class="one">
                         <h2>Quem somos</h2>
                         <p>
-                            A Smart Sale é uma aplicação de marketplace na área de tecnologia criada no Dia 12 de Agosto de
+                            A Smart Sale é uma aplicação de marketplace na área de tecnologia criada no dia 12 de agosto de
                             2019 com o objetivo de atender a necessidade de pessoas que desejam vender seus produtos perto
                             da data de validade, assim evitando perda de produtos.
                         </p>
@@ -205,7 +55,7 @@
                     <div class="two">
                         <h2>O que propomos</h2>
                         <p>
-                            Propomos ajuda a pessoas que desejam vender seus produtos seja alimento ou vestuário, de maneira
+                            Propomos ajuda a pessoas que desejam vender seus produtos, seja alimento ou vestuário, de maneira
                             segura e eficiente.
                         </p>
                     </div>
