Link Login fixed header

--- a/cadastroelogin.html
+++ b/cadastroelogin.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro e Login</title>
     <link rel="stylesheet" href="css/final.css">
-    <!-- <style>
+    <style>
         :root {
             --roxo: #A200CB;
         }
@@ -168,7 +168,7 @@
                 width: 350px;
             }
         }
-    </style> -->
+    </style>
     <style>
 
     </style>
@@ -183,7 +183,7 @@
                 </div>
                 <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                 <div class="botao-login">
-                    <a href="login.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
+                    <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
                         <p>Entrar</p>
                     </a>
                 </div>
