--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -123,7 +123,7 @@
                     </div>
                     <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                     <div class="botao-login">
-                        <a href="login.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
+                        <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
                             <p>Entrar</p>
                         </a>
                     </div>
