--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -147,18 +147,21 @@
         </header>
         <main>
             <div class="faq_pag">
+            <div class="bannerFaq">
+                <h1>Perguntas Frequentes</h1>
+            </div>    
             <div class="container1_perguntasfrequentes">
                 <div class="texto_perguntasfrequentes">
-                    <img src="img/sonhar-com-mercado.png" alt=" Dúvidas Mercado">
+                    <!-- <img src="img/sonhar-com-mercado.png" alt=" Dúvidas Mercado"> -->
                     <h2>Perguntas 1</h2>
                     <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
                     <h2>Perguntas 1</h2>
                     <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
                     <h2>Perguntas 1</h2>
                     <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                </div>
-                <div class="text_perguntasfrequentes">
-                    <img src="img/armario.png " alt="Dúvidas Vestuário">
+                <!-- </div>
+                <div class="text_perguntasfrequentes"> -->
+                    <!-- <img src="img/armario.png " alt="Dúvidas Vestuário"> -->
                     <h2>Perguntas 1</h2>
                     <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
                     <h2>Perguntas 1</h2>
