Texto da home adicionado

--- a/home.html
+++ b/home.html
@@ -57,17 +57,9 @@
                         </div>
                         <section class="txthome">
                             <h3>Objetivo</h3>
-                            <p>Massa sociosqu etiam ullamcorper massa porta nulla mi mattis purus, vestibulum gravida
-                                eget facilisis a rutrum dapibus nam. litora eu phasellus scelerisque aenean fusce
-                                dapibus
-                                non eu consequat duis, commodo augue duis torquent libero tortor vulputate maecenas
-                                nunc. mauris taciti quisque imperdiet neque quisque sed lacus pellentesque, porta
-                                aliquet
-                                cras elit donec a malesuada euismod, aliquam ultricies hendrerit auctor quis velit
-                                pellentesque. ut urna ac neque dolor fringilla nam sem tristique mauris, torquent aptent
-                                dapibus eleifend dui mauris dictum laoreet lacinia, pharetra nunc ad interdum sed fames
-                                lorem morbi. dolor tellus curabitur lacus eros, imperdiet per orci, habitant ultricies
-                                metus .
+                            <p>O objetivo dessa aplicação trás ofertas de produtos até nossos clientes. Ofertas essas de produtos com data de validade próximas, portanto, com um preço mais acessível. Ótimo para quem quer economizar e evitar que produtos não tenham um destino sem consumo. Desenvolvido pela empresa -Faivi-, apresenta soluções envolvendo doações para ONGs e até mesmo um ranking de vendedores e clientes.
+
+                                Há vantagens de se utilizar a Smart Sale, entre elas a diminuição do desperdício que muitos produtos sofrem ao não serem consumidos ou descartados por perecerem. Com esta solução, estes produtos são consumidos antes de perecerem, sejam por consumidores ou ONGs. Outra vantagem é a possibilidade de encontrar produtos em oferta e com um preço mais acessível. Além desses benefícios, um ranking apresenta a colocação de quem utiliza a aplicação e efetua doações.
                             </p>
                         </section>
                     </div>
